Fixed bug where particles canvas wasn't filling whole viewport on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -54,21 +54,23 @@ body {
     }
 }
 
-.main-wrapper {
-  display: block;
-  height: 100%;
-}
-
 #particles-js {
   background: $main;
-  width: 100%;
+  display: block;
+  vertical-align: bottom;
+  width: 100vw;
   min-height: 100vh;
-  margin: 0 auto;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
+  .particles-js-canvas-el {
+    width:100vw !important;
+    height:100vh !important;
+  }
 }
 
 .content {
+  z-index: 1;
   text-align: center;
   color:#FFF;
   position: absolute;
@@ -174,9 +176,7 @@ body {
 .user {
   text-align: center;
   margin: 10px;
-  text-align: center;
-  margin: 10px;
-  font-size: 50px;
+  font-size: 60px;
   p {
     font-size: 16px;
   }
